--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "conditioner-core": "^2.3.3",
     "core-js": "^3.21.1",
     "lazysizes": "^5.3.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "regenerator-runtime": "^0.13.9"
   }
 }
